Opened 12 years ago
Closed 12 years ago
#8972 closed bug (fixed)
Kernel: unhandled page fault
Reported by: | jessicah | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | slab memory manager | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
I wasn't actively using Haiku at the time... might have still been building Haiku sources/scp'ing files. I don't really know :p
Attachments (2)
Change History (6)
by , 12 years ago
comment:1 by , 12 years ago
comment:2 by , 12 years ago
Keywords: | slab memory manager added |
---|
If you still have that exact kernel around, please attach an objdump of the crashing MemoryManager::PerformMaintenance()
. Run
objdump -D --demangle .../path/to/kernel_x86 > output
and copy the section for the method in question from the output (should be < 100 lines).
by , 12 years ago
Attachment: | perform_maintenance.txt added |
---|
objdump of kernel's PerformMaintenance()
comment:3 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Thanks. Working on it...
Note:
See TracTickets
for help on using tickets.
Using hrev44528.